--- a/angular.json
+++ b/angular.json
@@ -26,11 +26,18 @@
             "assets": [
               {
                 "glob": "**/*",
-                "input": "public"
+                "input": "src/assets",
+                "output": "/assets"
               }
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.css" ,
               "src/styles.scss"
+            ],
+            "scripts": [
+              "node_modules/jquery/dist/jquery.js" ,
+              "node_modules/popper.js/dist/umd/popper.js" ,
+              "node_modules/bootstrap/dist/js/bootstrap.js"
             ],
             "server": "src/main.server.ts",
             "outputMode": "server",
@@ -99,5 +106,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
