--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "@angular/platform-server": "^20.0.0",
     "@angular/router": "^20.0.0",
     "@angular/ssr": "^20.0.2",
+    "@fortawesome/fontawesome-free": "^6.7.2",
+    "bootstrap": "^4.1.3",
     "express": "^5.1.0",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
