--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@angular/ssr": "^20.0.2",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "bootstrap": "^4.1.3",
+    "dexie": "^4.0.11",
     "express": "^5.1.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.3",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.22.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
