--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^4.1.3",
     "dexie": "^4.0.11",
     "express": "^5.1.0",
+    "fake-indexeddb": "^6.0.1",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.3",
     "rxjs": "~7.8.0",
